# alice-shop-floor

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
alice_shop_floor/: api.py  cut_inspector_utils.py  decoration_engine.py  decoration_router.py  defect_intelligence_utils.py  downtime_utils.py  esg_utils.py  hooks.py  incentive_pay_utils.py  operator_quality_utils.py  pace_engine.py  print_job_utils.py  setup.py  stitch_inspector_utils.py  tasks.py  translator.py  wip_bottleneck_utils.py  work_order_scheduler.py
alice_shop_floor/alice_shop_floor/: decoration_utils.py  fabric_inspector_utils.py  final_inspector_utils.py  hooks.py  line_balancing_utils.py  modules.txt  operator_skill_utils.py  patches.txt  pick_to_bin_utils.py  press_inspector.py  tasks.py  teeriot_api.py
alice_shop_floor/alice_shop_floor/fixtures/: workstation.json
alice_shop_floor/alice_shop_floor/machine_drivers/: base_driver.py  epson_dtg.py
alice_shop_floor/alice_shop_floor/sanmar/: __init__.py  po_creator.py
alice_shop_floor/doctype/alice_language_config/: alice_language_config.json
alice_shop_floor/doctype/alice_settings/: alice_settings.json
alice_shop_floor/doctype/bottleneck_alert/: bottleneck_alert.json
alice_shop_floor/doctype/cut_deviation_map/: cut_deviation_map.json
alice_shop_floor/fixtures/: custom_field.json  quality_inspection_template.json
alice_shop_floor/machine_drivers/: __init__.py  epson_dtf.py  melco_emb.py  pneumatic_press.py  registry.py
alice_shop_floor/sanmar/: catalog_sync.py  client.py  pricing_sync.py  stock_lookup.py
(+155 files in other folders)
